--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="game-container bg-white rounded-lg shadow-lg overflow-hidden">
                 <iframe 
-                    src="https://cloud.onlinegames.io/games/2025/unity'monster-survivors/index-og.html"
+                    src="https://games.crazygames.com/en_US/traffic-rider-vvq/index.html?v=1.327"
                     class="w-full h-full border-0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen>
