--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="canonical" href="https://sanergame.online">
     <title>Saner Game - Monster Survival Adventure | Play Online</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5QEV4V4SF6"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-5QEV4V4SF6');
+    </script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
         
